# azure-sphere-mqtts

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app_manifest.json  main.c
MQTT-C/include/: mqtt_pal.h
MQTT-C/src/: mqtt_pal.c
certs/: client.crt  client.key
